--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="wizard_1">Wizard 1</string>
     <string name="name_wiz1">Name: Wiz1</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_tic_tac_toe">TicTacToe</string>
+    <string name="title_activity_rock_paper_scissors">RockPaperScissors</string>
+    <string name="title_activity_coin_flip">CoinFlip</string>
 </resources>
